--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: pink;
+    background-color: #FFC2D4;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
